nothing major change

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <hr class="m-3" />
     <p class="text-center">© All copyright reserved</p>
 
-    <script src="/script.js"></script>
-    <script src="/index.min.js"></script>
+    <script src="script.js"></script>
+    <script src="index.min.js"></script>
   </body>
 </html>
