add more projects
change resume and add signup page and to-do-list in project

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </p>
       <button class="bg-blue-300 py-2 px-5 rounded-md my-3 hover:bg-blue-400">
         <a
-          href="https://drive.google.com/file/d/1_9-U9PZDURmbdx_Lxktpsq1BXIbzfjln/view?usp=drivesdk"
+          href="https://docs.google.com/document/d/1xEm1mUOUiaYb8nh6U8Mlb7vFGswMN3oHXyoyEwtOfxo/edit?usp=sharing"
           >Download C.V.</a
         >
       </button>
@@ -119,7 +119,23 @@
             >Tindog Website</a
           >
         </li>
-        <!-- <li><a href="#" target="_blank" rel="noopener noreferrer">to-do-list</a></li> -->
+        <li class="text-violet-500 hover:text-blue-700 m-6 lg:text-3xl lg:p-8">
+          <a
+            href="https://wlqkm5.csb.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >To-do-List (using react)</a
+          >
+        </li>
+        <li class="text-violet-500 hover:text-blue-700 m-6 lg:text-3xl lg:p-8">
+          <a
+            href="https://wlqkm5.csb.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Web site | sign-up page (using mailchimps)</a
+          >
+        </li>
+        
       </ul>
     </div>
 
