--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </p>
       <button class="bg-blue-300 py-2 px-5 rounded-md my-3 hover:bg-blue-400">
         <a
-          href="https://docs.google.com/document/d/1xEm1mUOUiaYb8nh6U8Mlb7vFGswMN3oHXyoyEwtOfxo/edit?usp=sharing"
+          href="https://drive.google.com/file/d/1OJNLR_MY-89Qp_TY5qfjQBTqwfzgdjeQ/view?usp=sharing"
           >Download C.V.</a
         >
       </button>
