change right links on project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </li>
         <li class="text-violet-500 hover:text-blue-700 m-6 lg:text-3xl lg:p-8">
           <a
-            href="https://wlqkm5.csb.app/"
+            href="https://protected-brook-55138.herokuapp.com/"
             target="_blank"
             rel="noopener noreferrer"
             >Web site | sign-up page (using mailchimps)</a
